[project]
name = "habit-hub"
version = "0.1.0"
description = "Interactive Textual dashboard for Macro Tracker data"
authors = [{ name = "Tyron Experiments" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.48",
  "rich>=13.7",
]

[project.scripts]
habit-hub = "habit_hub.dashboard:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
